@@ -1,3 +1,8 @@
+2011-09-09  David S. Miller  <davem@davemloft.net>
+
+	* output.cc (Output_fill_debug_info::do_write): Use Swap_unaligned.
+	(Output_fill_debug_line::do_write): Likewise.
+
 2011-08-29  Cary Coutant  <ccoutant@google.com>
 
 	* output.cc: (Output_fill_debug_info::do_minimum_hole_size): Add
